--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 ---
 title: New site (with Jekyll now)
+layout: base
 ---
 
-<h1>Hello, Jekyll!</h1>
+<h2>Welcome to my new Jekyll-powered site!</h2>
+<h4>Posts</h4>
+{% for post in site.posts %}
+<p>{{ post.date | date_to_string }} - <strong><a href="{{ post.url }}">{{ post.title }}</a></strong></p>
+{% endfor %}
