--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ title: Code More
 layout: base
 ---
 
+{% include info.html %}
+<br />
+<h3>Статьи:</h3>
 {% for post in site.posts %}
-<p>{{ post.date | date_to_string }} - <strong><a href="{{ post.url }}">{{ post.title }}</a></strong></p>
+<p>{{ post.date | date_to_string }} - <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+</p>
 {% endfor %}
