--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 ---
-title: Code More
 layout: base
+title: Code More
 ---
 
 {% include info.html %}
 <br />
 <h3>Статьи:</h3>
 {% for post in site.posts %}
-<p>{{ post.date | date_to_string }} » <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
-{% if post.author %}
-<em class="text-info">({{ post.author }})</em>
-{% endif %}
-</p>
+	{% if post.section == null %}
+	<p>
+		{{ post.date | date_to_string }} » <strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
+		{% if post.author %}
+		<em class="text-info">({{ post.author }})</em>
+		{% endif %}
+	</p>
+	{% endif %}
 {% endfor %}
