--- a/programming/index.html
+++ b/programming/index.html
@@ -10,7 +10,7 @@ title: Изучение языков программирования
 {% for post in site.posts %}
 	{% if post.section == 'programming' %}
 		<p>
-		<span class="label label-info">{{ post.language }}</span> 
+		<span class="label label-primary">{{ post.language }}</span> 
 		<strong><a href="{{ post.url }}">{{ post.title }}</a></strong>
 		{% if post.author %}
 		 - <span class="text-info">{{ post.author }}</span>
