--- a/mathematiques/index.html
+++ b/mathematiques/index.html
@@ -1,6 +1,6 @@
 ---
 layout: base
-title: Изучение языков программирования
+title: Международный чемпионат математических и логических игр
 ---
 
 <div class="page-header text-center">
