Добавлена ссылка на документацию по Internet-технологиям
devdocs.io

--- a/catalog/index.html
+++ b/catalog/index.html
@@ -44,6 +44,7 @@ title: Каталог ссылок
 </table>
 <br><h2 id="div2">Языки и среды программирования</h2>
 <table class="table">
+<tr><td><a href="http://devdocs.io/" target="_blank">devdocs.io</a></td><td>Документация по интернет-технологиям.<br>На английском языке</td></tr>
 <tr><td><a href="http://www.cplusplus.com/" target="_blank">cplusplus.com</a></td><td>Подробное описание языка С++ и его стандартной библиотеки (включая последние изменения).<br>На английском языке</td></tr>
 <tr><td><a href="http://msdn.microsoft.com/ru-ru/library/3bstk3k5.aspx" target="_blank">Справочник по языку С++</a></td><td>Раздел MSDN, посвященный языку С++</td></tr>
 <tr><td><a href="http://www.visualstudio.com/ru-ru/downloads" target="_blank">Microsoft Visual Studio</a></td><td>IDE от Microsoft, поддерживает разработку на С++, C#, Visual Basic. Доступна бесплатная редакция Express</td></tr>
