Бассейны Ньютона. Обновление фракталов Мандельброта и Жюлиа

--- a/_posts/experimental/2014-04-07-julia-canvas.html
+++ b/_posts/experimental/2014-04-07-julia-canvas.html
@@ -29,6 +29,11 @@ section: experimental
             </div>
             <br>
             <div class="input-group">
+                <span class="input-group-addon">N</span>
+                <input type="text" id="n" class="form-control" value="2">
+            </div>
+            <br>
+            <div class="input-group">
                 <span class="input-group-addon">cx</span>
                 <input type="text" id="cx" class="form-control" value="0.36">
             </div>
