Deviation form input for Fern

--- a/_posts/experimental/2014-04-09-fern.html
+++ b/_posts/experimental/2014-04-09-fern.html
@@ -30,6 +30,11 @@ section: experimental
             </div>
             <br>
             <div class="input-group">
+                <span class="input-group-addon">Отклонение</span>
+                <input type="text" id="deviation" class="form-control" value="10">
+            </div>
+            <br>
+            <div class="input-group">
                 <span class="input-group-addon">Цвет</span>
                 <input type="text" id="color" class="form-control" value="0000FF">
             </div>
