Новые фотографии в "Результатах"

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -68,6 +68,18 @@ title: Результаты
         {file: "Gratitude_2012_02_16_1.jpg", title: ""},
         {file: "Gratitude_2012_02_16_2.jpg", title: ""},
         {file: "SertificateItPlanetaJava_2013_04_11.jpg", title: ""},
+        {file: "Photo_2005.JPG", title: ""},
+        {file: "Photo_2006.JPG", title: ""},
+        {file: "Photo_2007.JPG", title: ""},
+        {file: "Photo_2008.JPG", title: ""},
+        {file: "Photo_2009_1.JPG", title: ""},
+        {file: "Photo_2009_2.JPG", title: ""},
+        {file: "Photo_2009_3.JPG", title: ""},
+        {file: "Photo_2010.JPG", title: ""},
+        {file: "Photo_2011.JPG", title: ""},
+        {file: "Photo_2012.JPG", title: ""},
+        {file: "Photo_2013_1.JPG", title: ""},
+        {file: "Photo_2013_2.JPG", title: ""},
     ];
     $(function(){
         for(var i = 0; i < gallery.length; i++) {
