--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -9,9 +9,9 @@ title: Фотографии
 
 <script>
     var gallery = [
-        {file: "Photo_2005.JPG", title: ""},
-        {file: "Photo_2006.JPG", title: ""},
-        {file: "Photo_2007.JPG", title: ""},
+        {file: "Photo_2005.JPG", title: "Слева направо: Николаев Виктор Васильевич, Барсуков Михаил, Тимофеев Андрей, Лункин Олег, ?, Хагги Петр Анзельмович"},
+        {file: "Photo_2006.JPG", title: "Слева направо: Барсуков Михаил, Тимофеев Андрей, Губарев Валентин Юрьевич, Хагги Петр Анзельмович, Мотина Надежда Владимировна, Лункин Олег, Васильев Леонид, Двойнев Роман, Николаев Юрий, Василенок Олег, Медончак Андрей"},
+        {file: "Photo_2007.JPG", title: "Слева направо: Николаев Виктор Васильевич, Хростицкий Владимир, Николаев Юрий, Шваркунов Александр, Марченко Андрей, ?, Двойнев Роман, Недведский Павел, Медончак Андрей, Лехин Сергей Никифорович; сидя: Хагги Петр Анзельмович, Созинова Ирина, Губарев Валентин Юрьевич"},
         {file: "Photo_2008.JPG", title: ""},
         {file: "Photo_2009_1.JPG", title: ""},
         {file: "Photo_2009_2.JPG", title: ""},
