--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -18,9 +18,9 @@ title: Фотографии
         {file: "Photo_2009_3.JPG", title: "Слева направо: Нургалиев Алексей, Егоров Максим"},
         {file: "Photo_2010.JPG", title: "Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, ?, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
         {file: "Photo_2011.JPG", title: "Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
-        {file: "Photo_2012.JPG", title: ""},
-        {file: "Photo_2013_1.JPG", title: ""},
-        {file: "Photo_2013_2.JPG", title: ""},
+        {file: "Photo_2012.JPG", title: "Слева направо, сидя: Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
+        {file: "Photo_2013_1.JPG", title: "Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
+        {file: "Photo_2013_2.JPG", title: "Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шаоабод Максим, Дмитриев Артемий"},
     ];
     $(function(){
         addImages('gallery', gallery);
