--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -9,14 +9,14 @@ title: Фотографии
 
 <script>
     var gallery = [
-        {file: "Photo_2005.JPG", title: "Слева направо: Николаев Виктор Васильевич, Барсуков Михаил, Тимофеев Андрей, Лункин Олег, ?, Хагги Петр Анзельмович"},
+        {file: "Photo_2005.JPG", title: "Слева направо: Николаев Виктор Васильевич, Барсуков Михаил, Тимофеев Андрей, Лункин Олег, Гарин Максим, Хагги Петр Анзельмович"},
         {file: "Photo_2006.JPG", title: "Слева направо: Барсуков Михаил, Тимофеев Андрей, Губарев Валентин Юрьевич, Хагги Петр Анзельмович, Мотина Надежда Владимировна, Лункин Олег, Васильев Леонид, Двойнев Роман, Николаев Юрий, Василенок Олег, Медончак Андрей"},
-        {file: "Photo_2007.JPG", title: "Слева направо: Николаев Виктор Васильевич, Хростицкий Владимир, Николаев Юрий, Шваркунов Александр, Марченко Андрей, ?, Двойнев Роман, Недведский Павел, Медончак Андрей, Лехин Сергей Никифорович; сидя: Хагги Петр Анзельмович, Созинова Ирина, Губарев Валентин Юрьевич"},
-        {file: "Photo_2008.JPG", title: "Слева направо: Егоров Максим, ?, ?, Двойнев Роман, Шваркунов Александр, Хагги Петр Анзельмович, Николаев Виктор Васильевич, Марченко Андрей, Недведский Павел, Иванов Евгений, Хростицкий Владимир, Березин Дмитрий"},
+        {file: "Photo_2007.JPG", title: "Слева направо: Николаев Виктор Васильевич, Хростицкий Владимир, Николаев Юрий, Шваркунов Александр, Марченко Андрей, Степанов Андрей, Двойнев Роман, Недведский Павел, Медончак Андрей, Лехин Сергей Никифорович; сидя: Хагги Петр Анзельмович, Созинова Ирина, Губарев Валентин Юрьевич"},
+        {file: "Photo_2008.JPG", title: "Слева направо: Егоров Максим, Антонов Александр, Ловыгин Антон, Двойнев Роман, Шваркунов Александр, Хагги Петр Анзельмович, Николаев Виктор Васильевич, Марченко Андрей, Недведский Павел, Иванов Евгений, Хростицкий Владимир, Березин Дмитрий"},
         {file: "Photo_2009_1.JPG", title: "Слева направо: Двойнев Роман, Марченко Андрей, Шваркунов Александр, Губарев Валентин Юрьевич"},
         {file: "Photo_2009_2.JPG", title: "Слева направо: Барсук Алексей Юрьевич, Губарев Валентин Юрьевич, Хростицкий Владимир Аркадьевич, Решетников Иван Александрович"},
         {file: "Photo_2009_3.JPG", title: "Слева направо: Нургалиев Алексей, Егоров Максим"},
-        {file: "Photo_2010.JPG", title: "Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, ?, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
+        {file: "Photo_2010.JPG", title: "Слева направо: Хростицкий Владимир, Марченко Андрей, Егоров Максим, Барсук Алексей, Спицкий Дмитрий, Норина Юлия, Решетников Иван, Мотина Надежда Владимировна, Нургалиев Алексей"},
         {file: "Photo_2011.JPG", title: "Слева направо: Решетников Иван, Барсук Алексей, Нургалиев Алексей, Егоров Максим"},
         {file: "Photo_2012.JPG", title: "Слева направо, сидя: Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
         {file: "Photo_2013_1.JPG", title: "Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
