--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -36,6 +36,7 @@ title: Достижения
         {file: "CertificateInternetOlimpMath_2013_04_14_1.jpg", title: ""},
         {file: "CertificateInternetOlimpMath_2013_04_14_2.jpg", title: ""},
         {file: "CertificateInternetOlimpMath_2013_04_14_3.jpg", title: ""},
+        {file: "MedalMath_2013.JPG", title: ""},
     ];
     var mathLogic = [
         {file: "DiplomaMathLog_2011_06_01_1.jpg", title: ""},
@@ -116,7 +117,7 @@ title: Достижения
 <h3>Дипломы ACM ICPC</h3>
 <div id="acm-diplom"></div>
 
-<h3>Сертификаты Открытой международной студенческой Интернет-олимпиады</h3>
+<h3>Открытая международная студенческая Интернет-олимпиада</h3>
 <div id="open-olymp"></div>
 
 <h3>Международный чемпионат математических и логических игр</h3>
