--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -36,7 +36,7 @@ title: Достижения
         {file: "CertificateInternetOlimpMath_2013_04_14_1.jpg", title: ""},
         {file: "CertificateInternetOlimpMath_2013_04_14_2.jpg", title: ""},
         {file: "CertificateInternetOlimpMath_2013_04_14_3.jpg", title: ""},
-        {file: "MedalMath_2013.JPG", title: ""},
+        {file: "MedalMath_2013.jpg", title: ""},
     ];
     var mathLogic = [
         {file: "DiplomaMathLog_2011_06_01_1.jpg", title: ""},
