--- a/pskov/photo/index.html
+++ b/pskov/photo/index.html
@@ -21,8 +21,8 @@ title: Фотографии
         {file: "Photo_2012.JPG", title: "2012 год. Слева направо, сидя: Хижняк Александр, Дмитриев Артемий, Шалабод Максим, Шантарин Владимир, Нургалиев Алексей, Барсук Алексей, Решетников Иван, Коваленко Игорь; стоя: Губарев Валентин Юрьевич"},
         {file: "Photo_2013_1.JPG", title: "2013 год. Слева направо: Коваленко Игорь, Мотина Надежва Владимировна, Барсук Алексей, Губарев Валентин Юрьевич, Петрова Ирина"},
         {file: "Photo_2013_2.JPG", title: "2013 год. Слева направо: Шантарин Владимир, Губарев Валентин Юрьевич, Шаоабод Максим, Дмитриев Артемий"},
-        {file: "PhotoMath_2013_1.JPG", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
-        {file: "PhotoMath_2013_2.JPG", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
+        {file: "PhotoMath_2013_1.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шалабод Максим"},
+        {file: "PhotoMath_2013_2.jpg", title: "2013 год. Слева направо: Вертешев Сергей Михайлович, Лехин Сергей Никифорович, Шантарин Владимир"},
     ];
     $(function(){
         addImages('gallery', gallery);
