Сертификаты из Ижевска

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -74,6 +74,9 @@ title: Достижения
     ];
     var izhevsk = [
         {file: "CertificateIgevsk_2009_02_21.jpg", title: ""},
+        {file: "CertificateIgevsk_2011_02_20.JPG", title: ""},
+        {file: "CertificateIgevsk_2011_09_18.JPG", title: ""},
+        {file: "CertificateIgevsk_2012_02_16.JPG", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_1.jpg", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_2.jpg", title: ""},
         {file: "DiplomaIgevsk_2012_09_Evpatoria_3.jpg", title: ""},
