Preview, новые дипломы

--- a/pskov/achievments/index.html
+++ b/pskov/achievments/index.html
@@ -56,7 +56,11 @@ title: Достижения
     var itPlaneta = [
         {file: "DiplomaItPlaneta_2013_04_11.jpg", title: ""},
         {file: "CertificateItPlanetaJava_2013_04_11.jpg", title: ""},
+        {file: "CertificateItPlanetaJava_2014_01_31.jpg", title: ""},
     ];
+	var abbyy = [
+		{file: "DiplomaAbbyCup_2014.jpg", title: ""}
+	];
     var gratitude = [
         {file: "Gratitude_2009_02_21.jpg", title: ""},
         {file: "Gratitude_2012_02_16_1.jpg", title: ""},
@@ -100,6 +104,7 @@ title: Достижения
         addImages('administration', administration);
         addImages('izhevsk', izhevsk);
         addImages('gratitude', gratitude);
+		addImages('abbyy', abbyy);
     });
 </script>
 
@@ -124,6 +129,9 @@ title: Достижения
 
 <h3>IT-Планета</h3>
 <div id="it-planeta"></div>
+
+<h3>ABBYY Cup</h3>
+<div id="abbyy"></div>
 
 <h3>Сборы в Ижевске и Евпатории</h3>
 <div id="izhevsk"></div>
