--- a/_posts/experimental/2014-06-06-three-js.html
+++ b/_posts/experimental/2014-06-06-three-js.html
@@ -8,5 +8,5 @@ section: experimental
 <script src="/js/experimental/webjs.js"></script>
 
 <div class="text-center">
-<div id="output"></div>
+<div id="output" style="width: 400px; height: 400px;"></div>
 </div>
